--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -162,7 +162,7 @@ font:
   # spacing.
   offset:
     x: -1
-    y: -1
+    y: 0
 
     # Glyph offset determines the locations of the glyphs within their cells with
     # the default being at the bottom. Increasing `x` moves the glyph to the
@@ -170,6 +170,7 @@ font:
     #glyph_offset:
     #  x: 0
     #  y: 0
+   
 
     # Thin stroke font rendering (macOS only)
     #
@@ -185,7 +186,7 @@ font:
     #builtin_box_drawing: true
 
     # If `true`, bold text is drawn using the bright color variants.
-    #draw_bold_text_with_bright_colors: false
+    draw_bold_text_with_bright_colors: true 
 
     # Colors (Tomorrow Night)
     #colors:
@@ -413,7 +414,7 @@ font:
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
-  #unfocused_hollow: true
+  unfocused_hollow: true
 
   # Thickness of the cursor relative to the cell width as floating point number
   # from `0.0` to `1.0`.
@@ -433,7 +434,9 @@ live_config_reload: true
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-  program: /usr/local/bin/fish
+  program: /opt/homebrew/bin/fish
+
+
   #  args:
   #    - --login
 
@@ -444,7 +447,7 @@ shell:
   #working_directory: None
 
   # Send ESC (\x1b) before characters when alt is pressed.
-  # alt_send_esc: false
+  lt_send_esc: false
 
   # Offer IPC using `alacritty msg` (unix only)
   #ipc_socket: true
@@ -459,8 +462,8 @@ shell:
   #triple_click: { threshold: 300 }
 
   # If this is `true`, the cursor is temporarily hidden when typing.
-  #hide_when_typing: false
-
+  # hide_when_typing: false
+  
   # Regex hints
   #
   # Terminal hints can be used to find text in the visible part of the terminal
