--- a/alacritty.yml
+++ b/alacritty.yml
@@ -61,7 +61,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: none
+  decorations: buttonless 
 
   # Background opacity
   #
@@ -373,10 +373,10 @@ font:
     #
     #command: None
 
-    #selection:
+    selection:
     # This string contains all characters that are used as separators for
     # "semantic words" in Alacritty.
-    #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
+         semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
 
     # When set to `true`, selected text will be copied to the primary clipboard.
     #save_to_clipboard: false
